[tool.poetry]
name = "optuna_mongo_storage"
version = "0.1.0"
description = "MongoDB storage for optuna"
authors = ["Naruhide KITADA <kitfactory@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^4.1.1"
optuna = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
